# 3Dcube

./: .env.example  .gitignore  README.md  netlify.toml  package-lock.json  package.json
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/analyze/: route.ts
apps/web/src/app/api/indicators/: route.ts
apps/web/src/app/api/synthetic-umar/run/: route.ts
apps/web/src/app/api/synthetic-umar/scenarios/: route.ts
apps/web/src/app/api/upload/: route.ts
apps/web/src/components/: AnalysisReport.tsx  BacktestChart.tsx  ChartWorkspace.tsx  CubePlaceholder.tsx  DashboardWorkspace.tsx  FileSelector.tsx  LocalSetupCard.tsx  PipelineBar.tsx  RoadmapSection.tsx  StatusCard.tsx  SyntheticDemoLab.tsx  TopNav.tsx  UploadSection.tsx  UploadZone.tsx
apps/web/src/lib/: env.ts  types.ts
docs/: architecture.md  nt8-parser-spec.md  product-vision.md  roadmap.md
engine/: README.md  pyproject.toml  requirements.txt
engine/scripts/: analyze_nt8_file.py  run_health_check.py  run_synthetic_umar_demo.py
engine/src/tower_umar_engine/: __init__.py  config.py  health.py  nt8_file_analyzer.py
engine/src/tower_umar_engine/synthetic/: __init__.py  models.py  runner.py  scenarios.py  umar_demo_engine.py
src/app/: globals.css  layout.tsx  page.tsx
