[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tower-umar-engine"
version = "0.1.0"
description = "Local MBO backtesting and optimization engine for the Umar strategy on NQ futures"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
# Phase 2+ data dependencies (uncomment when ready)
# data = [
#   "databento>=0.38",
#   "pandas>=2.2",
#   "numpy>=1.26",
#   "pyarrow>=15",
# ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
